--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
 </head>
 
 <body>
+    <!-- デバッグ用のステータス表示 -->
+    <div id="debug" style="position: fixed; top: 10px; left: 10px; background: rgba(0,0,0,0.5); color: white; padding: 10px; z-index: 1000;"></div>
+
     <a-scene
         mindar-image="imageTargetSrc: https://cdn.glitch.global/5e45a02f-1793-4d54-b2c7-ac4d29a43d33/targets.mind?v=1739155705813;"
         color-space="sRGB"
-        renderer="colorManagement: true, physicallyCorrectLights: true"
+        renderer="colorManagement: true; physicallyCorrectLights: true"
         vr-mode-ui="enabled: false"
-        device-orientation-permission-ui="enabled: false">
+        device-orientation-permission-ui="enabled: false"
+        loading-screen="enabled: false">
 
         <a-assets>
             <a-asset-item id="dinosaur-model" src="https://cdn.glitch.me/5e45a02f-1793-4d54-b2c7-ac4d29a43d33/Rampaging%20T-Rex.glb?v=1739155222514"></a-asset-item>
@@ -28,16 +32,20 @@
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-        <a-entity mindar-image-target="targetIndex: 0" ar-controller>
+        <a-entity mindar-image-target="targetIndex: 0">
+            <!-- デバッグ用の箱 -->
+            <a-box position="0 0.5 0" scale="0.2 0.2 0.2" color="red"></a-box>
+            
+            <!-- 3Dモデル -->
             <a-entity
-    id="dinosaur"
-    gltf-model="#dinosaur-model"
-    position="0 0 0.1"
-    scale="0.1 0.1 0.1"
-    rotation="0 0 0"
-    animation-mixer="clip: Take 001; loop: repeat; timeScale: 1;"
-    visible="false">
-</a-entity>
+                id="dinosaur"
+                gltf-model="#dinosaur-model"
+                position="0 0 0"
+                scale="0.1 0.1 0.1"
+                rotation="0 0 0"
+                animation-mixer="timeScale: 1"
+                visible="true">
+            </a-entity>
         </a-entity>
     </a-scene>
 
