--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         device-orientation-permission-ui="enabled: false">
 
         <a-assets>
-            <a-asset-item id="dinosaur-model" src="https://cdn.glitch.me/5e45a02f-1793-4d54-b2c7-ac4d29a43d33/Rampaging%20T-Rex.glb?v=1739155222514"></a-asset-item>
+            <a-asset-item id="dinosaur-model" src="https://cdn.glitch.global/5e45a02f-1793-4d54-b2c7-ac4d29a43d33/amazing_dinoworld_tyrannosaur.glb?v=1739159665820"></a-asset-item>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
