🐀🌅 Checkpoint ./index.html:73225199/11

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a-entity
                 id="dinosaur"
                 gltf-model="#dinosaur-model"
-                animation-mixer="timeScale: 1.5; loop: repeat"
+                animation-mixer="clip: run; timeScale: 1.5; loop: repeat"
                 position="0 -0.2 0"
                 scale="0.05 0.05 0.05"
                 rotation="0 90 0"
