💕🏯 Checkpoint ./index.html:73225199/5639

--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dinosaur AR Experience</title>
 
-    <!-- A-Frame 1.6.0 に更新 -->
+    <!-- A-Frame 1.6.0 -->
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-    <!-- アニメーション用のextrasライブラリを追加 -->
     <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
-    <!-- MindAR -->
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.3/dist/mindar-image.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.3/dist/mindar-image-aframe.prod.js"></script>
 
@@ -27,13 +25,34 @@
         device-orientation-permission-ui="enabled: false">
 
         <a-assets>
-            <a-asset-item id="dinosaur-model" src="https://cdn.glitch.me/5e45a02f-1793-4d54-b2c7-ac4d29a43d33/Rampaging%20T-Rex.glb?v=1739155222514" response-type="arraybuffer"></a-asset-item>
+            <a-asset-item id="dinosaur-model" src="https://cdn.glitch.me/5e45a02f-1793-4d54-b2c7-ac4d29a43d33/Rampaging%20T-Rex.glb?v=1739155222514"></a-asset-item>
         </a-assets>
 
-        <!-- ライティングの設定 -->
-        <a-light type="ambient" intensity="1" color="#ffffff"></a-light>
-        <a-light type="directional" intensity="1" color="#ffffff" position="1 1 1"></a-light>
-        <a-light type="hemisphere" intensity="0.5" color="#ffffff" groundColor="#ffffff"></a-light>
+        <!-- 強化されたライティング設定 -->
+        <!-- 環境光 - 全体的な明るさ -->
+        <a-light type="ambient" color="#ffffff" intensity="0.5"></a-light>
+        
+        <!-- メインの方向光 - 主要な影とハイライト -->
+        <a-light type="directional" 
+                color="#ffffff" 
+                intensity="1" 
+                position="2 4 -3" 
+                target="#dinosaur">
+        </a-light>
+        
+        <!-- 補助光 - 影の部分を明るく -->
+        <a-light type="point" 
+                color="#ffffff" 
+                intensity="0.5" 
+                position="-2 1 1">
+        </a-light>
+
+        <!-- 環境光2 - 下からの反射光 -->
+        <a-light type="hemisphere" 
+                color="#ffffff" 
+                groundColor="#b4a87e" 
+                intensity="0.5">
+        </a-light>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
@@ -41,11 +60,15 @@
             <a-entity
                 id="dinosaur"
                 gltf-model="#dinosaur-model"
-                animation-mixer="clip: run; timeScale: 1; loop: repeat"
+                animation-mixer="clip: run; timeScale: 1.5; loop: repeat"
                 position="0 -0.2 0"
                 scale="0.05 0.05 0.05"
                 rotation="0 90 0"
-                material="shader: standard; roughness: 1; metalness: 0;"
+                material="shader: standard; 
+                         roughness: 0.7; 
+                         metalness: 0.1;
+                         normalScale: 1 1;
+                         envMapIntensity: 1;"
                 shadow="cast: true; receive: true">
             </a-entity>
         </a-entity>
