--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         device-orientation-permission-ui="enabled: false">
 
         <a-assets>
-            <a-asset-item id="dinosaur-model" src="https://cdn.glitch.me/5e45a02f-1793-4d54-b2c7-ac4d29a43d33/Rampaging%20T-Rex.glb?v=1739155222514"></a-asset-item>
+            <a-asset-item id="dinosaur-model" src="https://cdn.glitch.global/5e45a02f-1793-4d54-b2c7-ac4d29a43d33/Running_T-Rex.glb?v=1739189988170"></a-asset-item>
         </a-assets>
 
         <!-- 強化されたライティング設定 -->
@@ -61,8 +61,8 @@
                 id="dinosaur"
                 gltf-model="#dinosaur-model"
                 animation-mixer="clip: run; timeScale: 1.5; loop: repeat"
-                position="0 -0.2 0"
-                scale="0.05 0.05 0.05"
+                position="-0.2 -0.5 -0.2"
+                scale="0.2 0.2 0.2"
                 rotation="0 90 0"
                 material="shader: standard; 
                          roughness: 0.7; 
