--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             <a-entity
                 id="dinosaur"
                 gltf-model="#dinosaur-model"
-                animation-mixer="clip: run; timeScale: 1.5; loop: repeat"
+                animation-mixer="clip: idle; timeScale: 1.5; loop: repeat"
                 position="-0.2 -0.5 -0.2"
-                scale="0.2 0.2 0.2"
-                rotation="0 90 0"
+                scale="0.25 0.25 0.25"
+                rotation="0 45 0"
                 material="shader: standard; 
                          roughness: 0.7; 
                          metalness: 0.1;
