--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Dinosaur AR Experience</title>
 
     <!-- A-Frame 1.6.0 -->
@@ -11,74 +11,97 @@
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.3/dist/mindar-image.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.3/dist/mindar-image-aframe.prod.js"></script>
 
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body>
-    <div id="debug" style="position: fixed; top: 10px; left: 10px; background: rgba(0,0,0,0.5); color: white; padding: 10px; z-index: 1000;"></div>
+  <body>
+    <div
+      id="debug"
+      style="
+        position: fixed;
+        top: 10px;
+        left: 10px;
+        background: rgba(0, 0, 0, 0.5);
+        color: white;
+        padding: 10px;
+        z-index: 1000;
+      "
+    ></div>
 
     <a-scene
-        mindar-image="imageTargetSrc: https://cdn.glitch.global/5e45a02f-1793-4d54-b2c7-ac4d29a43d33/targets.mind?v=1739155705813;"
-        color-space="sRGB"
-        renderer="colorManagement: true; physicallyCorrectLights: true; antialias: true;"
-        vr-mode-ui="enabled: false"
-        device-orientation-permission-ui="enabled: false">
+      mindar-image="imageTargetSrc: https://cdn.glitch.global/5e45a02f-1793-4d54-b2c7-ac4d29a43d33/targets.mind?v=1739155705813;"
+      color-space="sRGB"
+      renderer="colorManagement: true; physicallyCorrectLights: true; antialias: true;"
+      vr-mode-ui="enabled: false"
+      device-orientation-permission-ui="enabled: false"
+    >
+      <a-assets>
+        <a-asset-item
+          id="dinosaur-model"
+          src="https://cdn.glitch.global/5e45a02f-1793-4d54-b2c7-ac4d29a43d33/Running_T-Rex.glb?v=1739189988170"
+        ></a-asset-item>
+      </a-assets>
 
-        <a-assets>
-            <a-asset-item id="dinosaur-model" src="https://cdn.glitch.global/5e45a02f-1793-4d54-b2c7-ac4d29a43d33/Running_T-Rex.glb?v=1739189988170"></a-asset-item>
-        </a-assets>
+      <!-- 強化されたライティング設定 -->
+      <!-- 環境光 - 全体的な明るさ -->
+      <a-light type="ambient" color="#ffffff" intensity="0.5"></a-light>
 
-        <!-- 強化されたライティング設定 -->
-        <!-- 環境光 - 全体的な明るさ -->
-        <a-light type="ambient" color="#ffffff" intensity="0.5"></a-light>
-        
-        <!-- メインの方向光 - 主要な影とハイライト -->
-        <a-light type="directional" 
-                color="#ffffff" 
-                intensity="1" 
-                position="2 4 -3" 
-                target="#dinosaur">
-        </a-light>
-        
-        <!-- 補助光 - 影の部分を明るく -->
-        <a-light type="point" 
-                color="#ffffff" 
-                intensity="0.5" 
-                position="-2 1 1">
-        </a-light>
+      <!-- メインの方向光 - 主要な影とハイライト -->
+      <a-light
+        type="directional"
+        color="#ffffff"
+        intensity="1"
+        position="2 4 -3"
+        target="#dinosaur"
+      >
+      </a-light>
 
-        <!-- 環境光2 - 下からの反射光 -->
-        <a-light type="hemisphere" 
-                color="#ffffff" 
-                groundColor="#b4a87e" 
-                intensity="0.5">
-        </a-light>
+      <!-- 補助光 - 影の部分を明るく -->
+      <a-light type="point" color="#ffffff" intensity="0.5" position="-2 1 1">
+      </a-light>
 
-        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+      <!-- 環境光2 - 下からの反射光 -->
+      <a-light
+        type="hemisphere"
+        color="#ffffff"
+        groundColor="#b4a87e"
+        intensity="0.5"
+      >
+      </a-light>
 
-        <a-entity mindar-image-target="targetIndex: 0">
-            <a-entity
-                id="dinosaur"
-                gltf-model="#dinosaur-model"
-                animation-mixer="clip: idle; timeScale: 1.5; loop: repeat"
-                position="-0.2 -0.5 -0.2"
-                scale="0.25 0.25 0.25"
-                rotation="0 45 0"
-                material="shader: standard; 
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+
+      <a-entity mindar-image-target="targetIndex: 0">
+        <a-entity
+          id="dinosaur"
+          gltf-model="#dinosaur-model"
+          animation-mixer="clip: idle; timeScale: 1.5; loop: repeat"
+          position="-0.2 -0.5 -0.2"
+          scale="0.25 0.25 0.25"
+          rotation="0 45 0"
+          material="shader: standard; 
                          roughness: 0.7; 
                          metalness: 0.1;
                          normalScale: 1 1;
                          envMapIntensity: 1;"
-                shadow="cast: true; receive: true">
-            </a-entity>
+          shadow="cast: true; receive: true"
+        >
         </a-entity>
+      </a-entity>
     </a-scene>
 
-    <div class="buttons">
-        <button class="button" id="release-button">箱から出す</button>
-        <button class="button" id="capture">写真を撮る</button>
+    <div class="ar-ui">
+        <div class="buttons">
+            <button class="button camera-button" id="capture">
+                <div class="camera-icon"></div>
+            </button>
+        </div>
+        <div class="share-options" id="share-options">
+            <button class="button share-button" id="download">保存</button>
+            <button class="button share-button" id="share">シェア</button>
+        </div>
     </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
