🏄🍂 Checkpoint ./index.html:73225199/540 ./style.css:73225199/382

--- a/index.html
+++ b/index.html
@@ -80,10 +80,16 @@
     </div>
 
     <!-- カメラボタンUI -->
-    <div id="button-container">
-        <button class="button camera-button" id="capture">
-            <div class="camera-icon"></div>
+    <div class="ar-ui">
+      <div class="buttons">
+        <button class="camera-button" id="capture">
+          <div class="camera-icon"></div>
         </button>
+        <div class="share-options" id="share-options">
+          <button class="share-button" id="download">保存</button>
+          <button class="share-button" id="share">シェア</button>
+        </div>
+      </div>
     </div>
 
     <!-- スクリプトファイル -->
