⛹🏓 Checkpoint ./index.html:73225199/1410 ./style.css:73225199/1141

--- a/index.html
+++ b/index.html
@@ -75,13 +75,14 @@
   <div id="scanning-overlay">箱の中をスキャンしてください</div>
   
   <div class="buttons">
-    <button class="button" id="release-button">
-        <i class="fas fa-box-open"></i>
-    </button>
-    <button class="button" id="capture">
+        <button class="button" id="release-button">外に出す</button>
+        <button class="button" id="capture">
         <i class="fas fa-camera"></i>
     </button>
-</div>
+    <button class="social-links" id="website-button">
+        <i class="fas fa-globe"></i>
+      </button>
+    </div>
     <script src="script.js"></script>
 
 </body>
