--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <button class="button" id="capture">
         <i class="fas fa-camera"></i>
     </button>
-    <button class="social-links" id="website-button">
+    <button class="button" id="website-button">
         <i class="fas fa-globe"></i>
       </button>
     </div>
