💇🍐 Checkpoint ./.glitch-assets:73225199/408 ./index.html:73225199/183

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
      <div class="example-container">  
    <a-scene
-    mindar-image="imageTargetSrc: https://cdn.glitch.global/5e45a02f-1793-4d54-b2c7-ac4d29a43d33/targets.mind?v=1739155705813;"
+    mindar-image="imageTargetSrc: https://cdn.glitch.global/900fa12a-e435-49d1-8491-ff87a0daf76d/targets.mind?v=1739973630297"
     embedded
     color-space="sRGB"
     renderer="colorManagement: true; physicallyCorrectLights: true; preserveDrawingBuffer: true; antialias: true;"
