--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     vr-mode-ui="enabled: false"
     device-orientation-permission-ui="enabled: false">
         <a-assets>
-            <a-asset-item id="dinosaur-model" src="./assets/trex_running_loop.glb"></a-asset-item>
+            <a-asset-item id="dinosaur-model" src="./assets/trex_run.glb"></a-asset-item>
         </a-assets>
         <!-- 強化されたライティング設定 -->
         <!-- 環境光 - 全体的な明るさ -->
